update to pages, changes in layouts, and scss

--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -6,7 +6,7 @@
 					<div class="col-md-12"><h2>{{project.title}}</h2></div>
 				  	<div class="col-md-4">
 				  		<div class="img-block">
-					  		<img ng-src="http://localhost:9000/images/projects/{{project.imgUrl}}">
+					  		<img ng-src="http://stage.weseldridge.com/images/projects/{{project.imgUrl}}">
 				  		</div>
 			  		</div>
 				  	<div class="col-md-8">
