--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,7 +23,7 @@ body {
 footer {
     width: 100%;
     height: 40px;
-    margin: 100px auto 50px auto;
+    margin: 100px auto 20px auto;
     background-color: #55606d;
     padding-top: 10px;
     color: white;
@@ -135,6 +135,45 @@ nav ul li a:hover {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.5em;
     font-weight: 300;
+    overflow: hidden;
+
+
+
+    .sub-header {
+        color: #2fafb1;
+    }
+
+    .quote {
+        font-size: .85em;
+        font-style: italic;
+    }
+
+    .sub-header-li li {
+        display: block;
+        padding: 1% 0 1% 0;
+        margin: 0;
+        font-size: .85em;
+    }
+
+    .sub-header-li {
+        padding: 0;
+        margin: 0;
+    }
+
+    h2 {
+        font-weight: 400;
+        color: #2fafb1;
+    }
+
+    h3 {
+        font-weight: 400;
+        color: #2fafb1;
+    }
+
+    .social-list div img {
+        max-width: 25px;
+        max-height: 25px;
+    }
 }
 
 .form-buttons li{
