--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -5,24 +5,52 @@
 				<div class="col-md-12">
 					<h1>Contact</h1>
 				</div>
-				<div class="col-md-6">
-
-					<p>
-						This is a bit of filler text until I write what I want to go here.
-						This is a bit of filler text until I write what I want to go here.
-						This is a bit of filler text until I write what I want to go here.
-						This is a bit of filler text until I write what I want to go here.
-						This is a bit of filler text until I write what I want to go here.
-						This is a bit of filler text until I write what I want to go here.
-						This is a bit of filler text until I write what I want to go here.
-					</p>
-					<h4>Social</h4>
-					<ul class="contact-social">
-						<li><a href="">Twitter</a></li>
-						<li><a href="">Google+</a></li>
-						<li><a href="">LinkedIn</a></li>
-						<li><a href="">Github</a></li>
-					</ul>
+				<div class="col-md-6 social-list">
+					<h3>Elsewhere on the web:</h3>
+					<div class="row">
+						<div class="col-md-6">
+							<a href="">
+								<img src="images/social-twitter.png">
+								Twitter
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a href="">
+								<img src="images/social-twitter.png">
+								Google+
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a href="">
+								<img src="images/social-twitter.png">
+								Facebook
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a href="">
+								<img src="images/social-twitter.png">
+								Linkedin
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a href="">
+								<img src="images/social-github.png">
+								GitHub
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a href="">
+								<img src="images/social-twitter.png">
+								Instagram
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a href="">
+								<img src="images/social-twitter.png">
+								Slideshare
+							</a>
+						</div>
+					</div>
 				</div>
 				<div class="col-md-6">
 					<form role="form">
