--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,26 @@
 <div class="container">
-	<div class="content">
-		<div class="row">
-		  <div class="col-md-8">
-		    This is the home page
-		  </div>
+	<div class="row">
+		<div class="col-md-6 content">
+			<p>
+				Welcome! I am Wesley Eldridge, a back-end web developer and freelancer in the Tuscaloosa area. I work at Randall-Reilly by day, and I am a content creator, open source enthusiast, and freelancer by night.  My passion is to build amazing products, that work intuitively, and are beautiful! 
+				<br/><br/>
+				Outside of application development my interest include economics, physics, and exploring the outdoors. 
+
+			</p>
+		</div>
+		<div class="col-md-6 content">
+				<div class="sub-header">My three drive forces:</div>
+				<ul class="sub-header-li">
+					<li>Education is the driving force our world. I believe we can do it better.</li>
+					<li>Humans should be a true space faring race. Our back yard does not count.</li>
+					<li></li>
+				</ul>
+				<div class="sub-header">A quote to live by:</div>
+				<p class="quote">
+					“Every day, think as you wake up, today I am fortunate to be alive, I have a precious human life, I am not going to waste it. I am going to use all my energies to develop myself, to expand my heart out to others; to achieve enlightenment for the benefit of all beings. I am going to have kind thoughts towards others, I am not going to get angry or think badly about others. I am going to benefit others as much as I can.” 
+					<br/>
+					― Dalai Lama XIV
+				</p>
 		</div>
 	</div>
 </div>
