--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -9,45 +9,33 @@
 					<h3>Elsewhere on the web:</h3>
 					<div class="row">
 						<div class="col-md-6">
-							<a href="">
-								<img src="images/social-twitter.png">
+							<a href="https://twitter.com/weseldridge">
+								<i class="fa fa-twitter"></i>
 								Twitter
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="">
-								<img src="images/social-twitter.png">
+							<a href="https://plus.google.com/+wesleyeldridge">
+								<i class="fa fa-google-plus"></i>
 								Google+
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="">
-								<img src="images/social-twitter.png">
-								Facebook
-							</a>
-						</div>
-						<div class="col-md-6">
-							<a href="">
-								<img src="images/social-twitter.png">
+							<a href="http://www.linkedin.com/in/weseldridge">
+								<i class="fa fa-linkedin"></i>
 								Linkedin
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="">
-								<img src="images/social-github.png">
+							<a href="https://github.com/weseldridge">
+								<i class="fa fa-github"></i>
 								GitHub
 							</a>
 						</div>
 						<div class="col-md-6">
-							<a href="">
-								<img src="images/social-twitter.png">
+							<a href="http://instagram.com/wesreldridge">
+								<i class="fa fa-instagram"></i>
 								Instagram
-							</a>
-						</div>
-						<div class="col-md-6">
-							<a href="">
-								<img src="images/social-twitter.png">
-								Slideshare
 							</a>
 						</div>
 					</div>
@@ -81,8 +69,8 @@
 						<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-10">
 								<ul class="pull-right form-buttons">
-									<li><button type="submit" class="btn btn-default btn-lg pull-right">Reset</button></li>
-									<li><button type="submit" class="btn btn-default btn-lg pull-right">Send</button></li>
+									<li><button type="submit" disabled="disabled" class="btn btn-default btn-lg pull-right">Reset</button></li>
+									<li><button type="submit" disabled="disabled" class="btn btn-default btn-lg pull-right">Send</button></li>
 								</ul>
 							</div>
 						</div>
