--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,9 +2,9 @@
 	<div class="row">
 		<div class="col-md-6 content">
 			<p>
-				Welcome! I am Wesley Eldridge, a back-end web developer and freelancer in the Tuscaloosa area. I work at Randall-Reilly by day, and I am a content creator, open source enthusiast, and freelancer by night.  My passion is to build amazing products, that work intuitively, and are beautiful! 
+				Welcome! I am Wesley Eldridge, a back-end web developer and freelancer in the Tuscaloosa area. I work at Randall-Reilly by day, and I am a content creator, open source enthusiast, and freelancer by night.  My passion is to build amazing products, that work intuitively, and are beautiful!
 				<br/><br/>
-				Outside of application development my interest include economics, physics, and exploring the outdoors. 
+				Outside of application development my interest include economics, physics, and exploring the outdoors.
 
 			</p>
 		</div>
@@ -13,7 +13,7 @@
 				<ul class="sub-header-li">
 					<li>Education is the driving force our world. I believe we can do it better.</li>
 					<li>Humans should be a true space faring race. Our back yard does not count.</li>
-					<li></li>
+					<li>Automation is our next industrial revolution. We have a lot of changes to make.</li>
 				</ul>
 				<div class="sub-header">A quote to live by:</div>
 				<p class="quote">
